# Comad

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: ComadConfig.cmake.in  ComadConfigPortable.cmake.in
src/: CMakeLists.txt  Comad.h  ComadBuildOptions.h.in  ComadReturnCodes.h.in  ComadVersion.cpp.in  ComadVersion.h.in  Command.cpp  Command.h  Command.tcc  CommandHandler.cpp  CommandHandler.h  CommandHandler.tcc  CommandLiterals.cpp  CommandLiterals.h  CommandLiterals.tcc  CommandNode.cpp  CommandNode.h  CommandNode.tcc  Logger.h  Logger.tcc  StringUtility.h  StringUtility.tcc  StringUtils.h  StringUtils.tcc  TypeTraits.h  Utility.h  Utility.tcc  Value.h  ValueUtility.cpp  ValueUtility.h  ValueUtility.tcc  ValueUtils.cpp  ValueUtils.h  ValueUtils.tcc
tests/: CMakeLists.txt  Tests.cpp
